test/library/standard/DateTime/timezoneAwarenessMismatch.1.good
timezoneAwarenessMismatch.chpl:46: error: both dateTimes must both be either naive or aware
